# lars-ros

./: README.md
LARS/: ARdrone Instructions   Ellipse feedback experiment  Falcon Demo Instructions  Joystick Demonstration instructions  Recording Data  gstreamer Commands
LARS/ROS/: ROS Guide.ipynb
LARS/gumstix/: Running ROS Locally.ipynb  Running the Vision Experiments.ipynb  Setting up Gumstix.ipynb  readme.txt
src/adaptive_following/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/adaptive_following/cfg/: adaptivecontrol.cfg
src/adaptive_following/docs/: AdaptiveControlVariablesConfig-usage.dox  AdaptiveControlVariablesConfig.dox  AdaptiveControlVariablesConfig.wikidoc
src/adaptive_following/launch/: adaptive_following.launch  multiple_adaptive_following.launch
src/adaptive_following/src/: adaptive_following.cpp  multiple_adaptive_following.cpp
src/adaptive_following_fbc/: CMakeLists.txt  package.xml
src/adaptive_following_fbc/cfg/: adaptivecontrol.cfg
src/adaptive_following_fbc/include/: adaptive_following.launch  multiple_adaptive_following.launch
src/adaptive_following_fbc/msg/: AdaptiveFollowingMsgs.msg
src/adaptive_following_fbc/src/: adaptive_following.cpp  multiple_adaptive_following.cpp
src/connectivity_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/connectivity_controller/cfg/: ConnectivityVariables.cfg  ControlVariables.cfg
src/connectivity_controller/docs/: ControlVariablesConfig-usage.dox  ControlVariablesConfig.dox
src/connectivity_controller/launch/: connectivity.launch  debug.launch  eigen_connectivity.launch  eigen_connectivity.launch~  four.launch  four.launch~
src/connectivity_controller/msg/: EigenConnectivityMsgs.msg  EigenConnectivityMsgs.msg~
src/connectivity_controller/src/: connectivity.cpp  connectivity_control_node.cpp  eigen_connectivity.cpp  eigen_connectivity_control_node.cpp
src/connectivity_controller_old/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/connectivity_controller_old/cfg/: ControlVariables.cfg~  Control_oldVariables.cfg  create.cfg
src/connectivity_controller_old/docs/: ControlVariablesConfig.wikidoc
src/connectivity_controller_old/launch/: connectivity.launch  connectivity.launch~  control.launch
src/connectivity_controller_old/msg/: Connectivity_oldMsgs.msg  Control_oldMsgs.msg
src/connectivity_controller_old/src/: connectivity.cpp  connectivity.cpp~  connectivity_control_node.cpp  connectivity_control_node.cpp~
src/crazyflie_control/: CMakeLists.txt  package.xml
src/crazyflie_control/cfg/: CrazyflieControlConfig.cfg
src/crazyflie_control/launch/: control.launch
src/crazyflie_control/scripts/: crazyflie_control_node.py
src/crazyflie_driver/: CMakeLists.txt  package.xml
src/crazyflie_driver/launch/: control.launch  joy.launch
src/crazyflie_driver/scripts/: crazyflie_node.py
src/crazyflie_driver/src/: crazyflie_teleop.cpp
src/create_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/create_controller/cfg/: ControlVariables.cfg
src/create_controller/msg/: ControlMsgs.msg  ControlMsgs.msg~
src/create_controller/src/: control_node.cpp  control_node_circle.cpp
src/create_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/create_driver/src/: CreateDriver.cpp  CreateDriverOld.cpp  create_driver.cpp  vicon_driver.cpp
src/distributed_connectivity_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/distributed_connectivity_controller/cfg/: create.cfg
src/distributed_connectivity_controller/launch/: circle_distconnectivity.launch  distconnectivity.launch
src/distributed_connectivity_controller/msg/: DistConnectivityMsgs.msg
src/distributed_connectivity_controller/src/: distributed_connectivity.cpp  distributed_connectivity_control_node.cpp
src/hasanmay/: CMakeLists.txt  package.xml
src/hasanmay/launch/: control.launch
src/hasanmay/src/: control_node.cpp
src/jingfu/: CMakeLists.txt  CMakeLists.txt~  RunDemo.cpp  package.xml
src/jingfu/data/: quad.txt  robot_1.txt  robot_2.txt  robot_3.txt  robot_4.txt
src/jingfu/launch/: jingfu.launch~  jingfu_3.launch  jingfu_3_tracking.launch  jingfu_3_tracking.launch~  jingfu_4.launch~
src/jingfu/src/: control_formation.cpp  control_formation.cpp~  control_formation_BKU.cpp  control_node.backup.cpp  control_node_3.cpp  control_node_3.cpp~  control_node_3_drone.cpp  control_node_3_drone.cpp~  control_node_3_drone_BKU_051815.cpp  control_node_3_drone_BKU_051815.cpp~  control_node_3_tracking.cpp  control_node_3_tracking.cpp~  control_node_4.cpp  control_node_4.cpp~  control_node_4_BKU.cpp  control_node_4_drone .cpp  control_node_4_drone .cpp~  control_node_4_v2.cpp  control_node_4_v2.cpp~  control_node_4_v3.cpp  control_node_4_v3.cpp~  control_node_b.cpp
src/joystick_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/joystick_controller/launch/: min_test.launch  min_test.launch~  min_test_distant.launch  ps3.launch  ps3_joy.launch
src/novint_falcon_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/robotchess/: CMakeLists.txt  package.xml
src/to_velocity_tracking/: CMakeLists.txt  package.xml
src/vicon/: CMakeLists.txt
src/vicon_bridge/: CMakeLists.txt  package.xml
src/vicon_bridge/launch/: .vicon.launch.swp  vicon.launch
src/vicon_bridge/src/: .vicon_bridge.cpp.swp
src/vision/: CMakeLists.txt  package.xml
src/vision_based_adaptive_following/: CMakeLists.txt  package.xml.orig
src/vision_based_localization/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  package.xml  package.xml.orig
src/vizon/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
testSVD/: CMakeLists.txt~  package.xml  package.xml~
testSVD/data/: exp_data.txt
testSVD/src/: testSVD.cpp  testSVD.cpp~  testme.cpp~
vicon_BKU/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vicon_BKU/launch/: min_test.launch  min_test.launch~
vicon_BKU/src/: Vicon.cpp.orig  old_to_new_vicon_translator.cpp  vicon_node.cpp  vicon_node.cpp.orig
(+168 files in other folders)
